--- a/user-home/.config/i3/config
+++ b/user-home/.config/i3/config
@@ -37,7 +37,7 @@ floating_modifier $mod
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec --no-startup-id dmenu_run -fn '-xos4-terminus-medium-*-*-*-14-*-*-*-*-*-*-*'
+bindsym $mod+d exec --no-startup-id dmenu_run -fn "Source Code Pro-16" -p "Run command: " -l 20
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
@@ -190,11 +190,22 @@ bindsym $mod+r mode "resize"
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
+# bar {
+#     # i3bar_command ~/.i3/lemonbar/i3_lemonbar.sh
+#     # tray_output HDMI
+#     status_command i3status
+#     font -xos4-terminus-medium-*-*-*-12-*-*-*-*-*-*-*
+# }
+
 bar {
-    # i3bar_command ~/.i3/lemonbar/i3_lemonbar.sh
-    # tray_output HDMI
     status_command i3status
-    font -xos4-terminus-medium-*-*-*-12-*-*-*-*-*-*-*
+    mode hide
+    position bottom
+    output primary
+    tray_output primary
+    font pango:Source Code Pro 10
+    separator_symbol "⁞"
+    modifier Mod4
 }
 
 ## Bvr Bindings
@@ -222,7 +233,8 @@ bindsym $mod+Shift+n workspace next
 bindsym $mod+Shift+p workspace prev
 
 # font
-font -xos4-terminus-*-*-*-*-12-*-*-*-*-*-*-*
+# font -xos4-terminus-*-*-*-*-12-*-*-*-*-*-*-*
+font pango:Source Code Pro 10
 
 # exit
 bindsym $mod+Shift+Delete exit
