--- a/user-home/.config/i3/config
+++ b/user-home/.config/i3/config
@@ -11,6 +11,8 @@
 
 set $mod Mod4
 
+set $font Cascadia Code
+
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
 #font pango:monospace 8
@@ -37,7 +39,7 @@ floating_modifier $mod
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec --no-startup-id dmenu_run -fn "Source Code Pro-16" -p "Run command: " -l 20
+bindsym $mod+d exec --no-startup-id dmenu_run -fn "$font-16" -p "Run command: " -l 20
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
@@ -203,7 +205,8 @@ bar {
     position bottom
     output primary
     tray_output primary
-    font pango:Source Code Pro 10
+    # THINKPAD
+    font pango:$font 11
     separator_symbol "⁞"
     modifier Mod4
 }
@@ -234,7 +237,8 @@ bindsym $mod+Shift+p workspace prev
 
 # font
 # font -xos4-terminus-*-*-*-*-12-*-*-*-*-*-*-*
-font pango:Source Code Pro 10
+# THINKPAD
+font pango:$font 11
 
 # exit
 bindsym $mod+Shift+Delete exit
@@ -325,8 +329,21 @@ bindsym $mod+Shift+m exec pactl set-sink-mute @DEFAULT_SINK@ toggle
 # Calendar
 bindsym $mod+Control+c exec uxterm -e calcurse
 
+## Laptop functions
+## ----------------------------------------------------
+
 # Touchpad toggle for Laptop
 bindsym XF86TouchpadToggle exec toggle-touchpad
+
+# Brightness manipulation (THINKPAD)
+bindsym XF86MonBrightnessUp exec brightness VALUE=+5%
+bindsym XF86MonBrightnessDown exec brightness VALUE=-5%
+bindsym Control+XF86MonBrightnessUp exec brightness VALUE=1
+bindsym Control+XF86MonBrightnessDown exec brightness VALUE=0.15
+bindsym $mod+XF86MonBrightnessDown exec brightness VALUE=0
+
+## ----------------------------------------------------
+
 
 ## Startup Scripts
 ## -----------------------------------
