Update volume bindings for Laptop.

--- a/user-home/.config/i3/config
+++ b/user-home/.config/i3/config
@@ -325,6 +325,11 @@ bindsym $mod+grave exec systemctl suspend
 bindsym $mod+bracketleft exec pactl set-sink-volume @DEFAULT_SINK@ -3%
 bindsym $mod+bracketright exec pactl set-sink-volume @DEFAULT_SINK@ +3%
 bindsym $mod+Shift+m exec pactl set-sink-mute @DEFAULT_SINK@ toggle
+# LAPTOP (THINKPAD) Volume Bindings
+bindsym XF86AudioLowerVolume exec pactl set-sink-volume @DEFAULT_SINK@ -3%
+bindsym XF86AudioRaiseVolume exec pactl set-sink-volume @DEFAULT_SINK@ +3%
+bindsym XF86AudioMute exec pactl set-sink-mute @DEFAULT_SINK@ toggle
+bindsym XF86AudioMicMute exec pactl set-source-mute @DEFAULT_SOURCE@ toggle
 
 # Calendar
 bindsym $mod+Control+c exec uxterm -e calcurse
