--- a/user-home/.local/share/applications/chromium-M.desktop
+++ b/user-home/.local/share/applications/chromium-M.desktop
@@ -11,7 +11,7 @@ Type=Application
 Icon=chromium
 StartupNotify=true
 Categories=Network;WebBrowser;
-MimeType=application/rdf+xml;application/rss+xml;application/xhtml+xml;application/xhtml_xml;application/xml;image/gif;image/jpeg;image/png;image/webp;text/html;text/xml;x-scheme-handler/http;x-scheme-handler/https;
+MimeType=application/rdf+xml;application/rss+xml;application/xhtml+xml;application/xhtml_xml;application/xml;image/gif;image/jpeg;image/png;image/webp;text/html;text/xml;x-scheme-handler/about;x-scheme-handler/http;x-scheme-handler/https;x-scheme-handler/unknown;
 NoDisplay=true
 Actions=new-window
 
