--- a/user-home/.local/share/applications/chromium-P.desktop
+++ b/user-home/.local/share/applications/chromium-P.desktop
@@ -4,7 +4,7 @@ Name[en_US]=Chromium Private Browser Default
 GenericName=Default Private Web Browser
 GenericName[en_US]=Default Private Web Browser
 Comment=Default Private Web Browser
-Exec=zsh -c 'chromium --user-data-dir=${HOME}/.config/chromium-P --incognito --new-window %U'
+Exec=chromium-P %U
 Terminal=false
 Type=Application
 Icon=chromium
@@ -12,12 +12,3 @@ StartupNotify=true
 Categories=Network;WebBrowser;
 MimeType=application/rdf+xml;application/rss+xml;application/xhtml+xml;application/xhtml_xml;application/xml;image/gif;image/jpeg;image/png;image/webp;text/html;text/xml;x-scheme-handler/about;x-scheme-handler/http;x-scheme-handler/https;x-scheme-handler/unknown;
 NoDisplay=false
-Actions=new-window;new-private-window;
-
-[Desktop Action new-window]
-Name=New Window
-Exec=zsh -c 'chromium --user-data-dir=${HOME}/.config/chromium-P --new-window %U'
-
-[Desktop Action new-private-window]
-Name=New Window
-Exec=zsh -c 'chromium --user-data-dir=${HOME}/.config/chromium-P --incognito --new-window %U'
