--- a/user-home/.config/i3/config
+++ b/user-home/.config/i3/config
@@ -207,8 +207,8 @@ bar {
     output primary
     tray_output primary
     # THINKPAD
-    font pango:$font 11
-    separator_symbol "⁞"
+    # font pango:$font 11
+    # separator_symbol "⁞"
     modifier Mod4
 }
 
