Open File manager in tiling mode (not floating).

--- a/user-home/.config/i3/config
+++ b/user-home/.config/i3/config
@@ -153,7 +153,7 @@ assign [class="(?i)watch-gpu-servers" ] workspace number $ws8
 
 ## Finer control
 for_window [class="(?i)firefox" title="(?i)mail"] move to workspace number $ws3
-for_window [class="(?i)pcmanfm"] floating enable
+# for_window [class="(?i)pcmanfm"] floating enable
 for_window [class="(?i)xterm"] floating enable, move position center, border none
 for_window [class="(?i)feh"] floating enable, move position center, border none
 
